--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="login_agree_privacy">#ff292f46</color>
+    <color name="login_agree_privacy_ext">#ff9e9d9d</color>
+    <color name="login_btn">#ff292f46</color>
+    <color name="home_tab_text">#ffbcbcbc</color>
+    <color name="home_tab_text_sel">#ff292f46</color>
 </resources>
