--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,156 +8,181 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/home_title"
+            android:padding="12dp"
+            android:text=""
+            android:layout_gravity="center_horizontal"
+            android:textSize="16sp"
+            android:textColor="@color/text_ff383838"
+            tools:text="@string/home_tab_offline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <!-- page -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragment_container_home_tab_page_offline"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragment_container_home_tab_page_online"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragment_container_home_tab_page_todo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragment_container_home_tab_page_mine"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible" />
+        </FrameLayout>
+
+
+        <!-- tabs -->
+        <LinearLayout
+            android:id="@+id/home_tab"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:background="@color/white"
+            android:elevation="@dimen/common_elevation"
+            android:orientation="horizontal">
+
+            <!-- 线下 -->
+            <LinearLayout
+                android:id="@+id/home_tab_offline"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/home_tab_online">
+
+                <ImageView
+                    android:id="@+id/home_tab_offline_icon"
+                    android:layout_width="@dimen/home_tab_size"
+                    android:layout_height="@dimen/home_tab_size"
+                    android:src="@mipmap/ic_home_tab_offline_sel" />
+
+                <TextView
+                    android:id="@+id/home_tab_offline_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_tab_offline"
+                    android:textColor="@color/home_tab_text_sel"
+                    android:textSize="@dimen/home_tab_text" />
+
+            </LinearLayout>
+
+            <!-- 线上 -->
+            <LinearLayout
+                android:id="@+id/home_tab_online"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintLeft_toRightOf="@id/home_tab_offline"
+                app:layout_constraintRight_toLeftOf="@id/home_tab_todo">
+
+                <ImageView
+                    android:id="@+id/home_tab_online_icon"
+                    android:layout_width="@dimen/home_tab_size"
+                    android:layout_height="@dimen/home_tab_size"
+                    android:src="@mipmap/ic_home_tab_online" />
+
+                <TextView
+                    android:id="@+id/home_tab_online_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_tab_online"
+                    android:textColor="@color/home_tab_text"
+                    android:textSize="@dimen/home_tab_text" />
+            </LinearLayout>
+
+            <!-- 待参加 -->
+            <LinearLayout
+                android:id="@+id/home_tab_todo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintLeft_toRightOf="@id/home_tab_online"
+                app:layout_constraintRight_toLeftOf="@id/home_tab_mine">
+
+                <ImageView
+                    android:id="@+id/home_tab_todo_icon"
+                    android:layout_width="@dimen/home_tab_size"
+                    android:layout_height="@dimen/home_tab_size"
+                    android:src="@mipmap/ic_home_tab_todo_sel" />
+
+                <TextView
+                    android:id="@+id/home_tab_todo_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_tab_todo"
+                    android:textColor="@color/home_tab_text"
+                    android:textSize="@dimen/home_tab_text" />
+            </LinearLayout>
+
+            <!-- 我的 -->
+            <LinearLayout
+                android:id="@+id/home_tab_mine"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/home_tab_mine_icon"
+                    android:layout_width="@dimen/home_tab_size"
+                    android:layout_height="@dimen/home_tab_size"
+                    android:src="@mipmap/ic_home_tab_mine" />
+
+                <TextView
+                    android:id="@+id/home_tab_mine_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_tab_mine"
+                    android:textColor="@color/home_tab_text"
+                    android:textSize="@dimen/home_tab_text" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/home_tab_page"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#f98"
-        app:layout_constraintBottom_toTopOf="@id/home_tab"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_weight="1" />
-
-    <!-- tabs -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/home_tab"
-        android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:background="@color/white"
-        android:elevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/home_tab_page">
-
-        <!-- 线下 -->
-        <LinearLayout
-            android:id="@+id/home_tab_offline"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/home_tab_online">
-
-            <ImageView
-                android:id="@+id/home_tab_offline_icon"
-                android:layout_width="@dimen/home_tab_size"
-                android:layout_height="@dimen/home_tab_size"
-                android:src="@mipmap/ic_home_tab_offline_sel" />
-
-            <TextView
-                android:id="@+id/home_tab_offline_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_tab_offline"
-                android:textColor="@color/home_tab_text_sel"
-                android:textSize="@dimen/home_tab_text" />
-
-        </LinearLayout>
-
-        <!-- 线上 -->
-        <LinearLayout
-            android:id="@+id/home_tab_online"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintLeft_toRightOf="@id/home_tab_offline"
-            app:layout_constraintRight_toLeftOf="@id/home_tab_todo">
-
-            <ImageView
-                android:id="@+id/home_tab_online_icon"
-                android:layout_width="@dimen/home_tab_size"
-                android:layout_height="@dimen/home_tab_size"
-                android:src="@mipmap/ic_home_tab_online" />
-
-            <TextView
-                android:id="@+id/home_tab_online_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_tab_online"
-                android:textColor="@color/home_tab_text_sel"
-                android:textSize="@dimen/home_tab_text"  />
-        </LinearLayout>
-
-        <!-- 待参加 -->
-        <LinearLayout
-            android:id="@+id/home_tab_todo"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintLeft_toRightOf="@id/home_tab_online"
-            app:layout_constraintRight_toLeftOf="@id/home_tab_mine">
-
-            <ImageView
-                android:id="@+id/home_tab_todo_icon"
-                android:layout_width="@dimen/home_tab_size"
-                android:layout_height="@dimen/home_tab_size"
-                android:src="@mipmap/ic_home_tab_todo_sel" />
-
-            <TextView
-                android:id="@+id/home_tab_todo_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_tab_todo"
-                android:textColor="@color/home_tab_text"
-                android:textSize="@dimen/home_tab_text" />
-        </LinearLayout>
-
-        <!-- 我的 -->
-        <LinearLayout
-            android:id="@+id/home_tab_mine"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintLeft_toRightOf="@id/home_tab_todo"
-            app:layout_constraintRight_toRightOf="parent">
-
-            <ImageView
-                android:id="@+id/home_tab_mine_icon"
-                android:layout_width="@dimen/home_tab_size"
-                android:layout_height="@dimen/home_tab_size"
-                android:src="@mipmap/ic_home_tab_mine" />
-
-            <TextView
-                android:id="@+id/home_tab_mine_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_tab_mine"
-                android:textColor="@color/home_tab_text"
-                android:textSize="@dimen/home_tab_text" />
-        </LinearLayout>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <androidx.fragment.app.FragmentContainerView
-        android:background="#f00"
         android:id="@+id/fragment_container_login"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
