--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="home_tab_text_sel">#ff292f46</color>
     <color name="text_ff383838">#ff383838</color>
     <color name="text_ff292f46">#ff292f46</color>
+    <color name="text_ff333333">#ff333333</color>
     <color name="vip">#FFF0D3A1</color>
     <color name="mine_item_text">#ff333333</color>
+    <color name="todo_activity_tab_normal">#FF808080</color>
+    <color name="line">#FFF1F2F8</color>
 </resources>
