--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,40 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/home_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:padding="12dp"
-            android:text=""
-            android:textColor="@color/text_ff383838"
-            android:textSize="16sp"
-            tools:text="@string/home_tab_offline" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/home_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="12dp"
+                android:text=""
+                android:textColor="@color/text_ff383838"
+                android:textSize="16sp"
+                tools:text="@string/home_tab_offline" />
+            <ImageView
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="15dp"
+                android:visibility="invisible"
+                android:id="@+id/home_title_icon"
+                android:layout_width="84dp"
+                android:layout_height="20dp"
+                android:src="@mipmap/text_app_name"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <!-- page -->
         <androidx.viewpager2.widget.ViewPager2
