--- a/app/src/main/res/layout/fragment_todo_activity_list.xml
+++ b/app/src/main/res/layout/fragment_todo_activity_list.xml
@@ -9,6 +9,7 @@
     tools:context=".LoginActivity">
 
     <androidx.core.widget.NestedScrollView
+        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -21,7 +22,7 @@
             <com.yangxinyu.smkt.ui.widget.FixedRecyclerView
                 android:id="@+id/activity_recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
