--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="mine_item_text">#ff333333</color>
     <color name="todo_activity_tab_normal">#FF808080</color>
     <color name="line">#FFF1F2F8</color>
+    <color name="done_tab_normal">#FF808080</color>
+    <color name="done_tab_sel">#FF292F46</color>
 </resources>
