--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="home_tab_size">27dp</dimen>
     <dimen name="home_tab_text">12sp</dimen>
     <dimen name="common_elevation">5dp</dimen>
+    <dimen name="common_elevation_2">2dp</dimen>
     <dimen name="mine_img_size">75dp</dimen>
     <dimen name="mine_common_margin">15dp</dimen>
     <dimen name="mine_vip_right_size">10dp</dimen>
@@ -23,4 +24,7 @@
     <dimen name="indicate_default_line_height">4dp</dimen>
     <dimen name="todo_recycler_offset">7.5dp</dimen>
     <dimen name="line">1dp</dimen>
+    <dimen name="done_action_size">107dp</dimen>
+    <dimen name="done_tab_normal_text_size">13sp</dimen>
+    <dimen name="done_tab_sel_text_size">14sp</dimen>
 </resources>
