--- a/app/src/main/res/layout/fragment_activity_list.xml
+++ b/app/src/main/res/layout/fragment_activity_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".MainActivity">
 
     <androidx.core.widget.NestedScrollView
         android:fillViewport="true"
@@ -14,17 +14,19 @@
         android:layout_height="wrap_content">
 
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <include layout="@layout/view_empty_data" />
 
             <com.yangxinyu.smkt.ui.widget.FixedRecyclerView
                 android:id="@+id/activity_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
-        </LinearLayout>
+        </FrameLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
