--- a/app/src/main/res/layout/item_todo_activity.xml
+++ b/app/src/main/res/layout/item_todo_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="@dimen/common_elevation"
+        android:layout_marginBottom="@dimen/common_elevation_offset"
         android:orientation="vertical"
         android:padding="15dp"
         tools:context=".LoginActivity">
@@ -170,6 +170,7 @@
                             android:layout_height="wrap_content"/>
 
                         <ImageView
+                            android:id="@+id/todo_nav"
                             android:src="@mipmap/todo_nav"
                             android:layout_width="wrap_content"
                             android:layout_height="10dp"/>
