--- a/app/src/main/res/layout/fragment_online.xml
+++ b/app/src/main/res/layout/fragment_online.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".MainActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/activity_tab"
