--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,187 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/home_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:padding="12dp"
-                android:text=""
-                android:textColor="@color/text_ff383838"
-                android:textSize="16sp"
-                tools:text="@string/home_tab_offline" />
-            <ImageView
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="15dp"
-                android:visibility="invisible"
-                android:id="@+id/home_title_icon"
-                android:layout_width="84dp"
-                android:layout_height="20dp"
-                android:src="@mipmap/text_app_name"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-        <!-- page -->
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/home_vp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/home_tab"
             android:layout_width="match_parent"
-            android:layout_height="49dp"
-            android:background="@color/white"
-            android:elevation="@dimen/common_elevation"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <!-- 线下 -->
-            <LinearLayout
-                android:id="@+id/home_tab_offline"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/home_tab_online">
 
-                <ImageView
-                    android:id="@+id/home_tab_offline_icon"
-                    android:layout_width="@dimen/home_tab_size"
-                    android:layout_height="@dimen/home_tab_size"
-                    android:src="@mipmap/ic_home_tab_offline_sel" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/home_tab_offline_text"
+                    android:id="@+id/home_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/home_tab_offline"
-                    android:textColor="@color/home_tab_text_sel"
-                    android:textSize="@dimen/home_tab_text" />
-
-            </LinearLayout>
-
-            <!-- 线上 -->
-            <LinearLayout
-                android:id="@+id/home_tab_online"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintLeft_toRightOf="@id/home_tab_offline"
-                app:layout_constraintRight_toLeftOf="@id/home_tab_todo">
+                    android:layout_gravity="center_horizontal"
+                    android:padding="12dp"
+                    android:text=""
+                    android:textColor="@color/text_ff383838"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@string/home_tab_offline" />
 
                 <ImageView
-                    android:id="@+id/home_tab_online_icon"
-                    android:layout_width="@dimen/home_tab_size"
-                    android:layout_height="@dimen/home_tab_size"
-                    android:src="@mipmap/ic_home_tab_online" />
-
-                <TextView
-                    android:id="@+id/home_tab_online_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/home_tab_online"
-                    android:textColor="@color/home_tab_text"
-                    android:textSize="@dimen/home_tab_text" />
-            </LinearLayout>
-
-            <!-- 待参加 -->
-            <LinearLayout
-                android:id="@+id/home_tab_todo"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintLeft_toRightOf="@id/home_tab_online"
-                app:layout_constraintRight_toLeftOf="@id/home_tab_mine">
+                    android:id="@+id/home_title_icon"
+                    android:layout_width="84dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="15dp"
+                    android:src="@mipmap/text_app_name"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/home_tab_todo_icon"
-                    android:layout_width="@dimen/home_tab_size"
-                    android:layout_height="@dimen/home_tab_size"
-                    android:src="@mipmap/ic_home_tab_todo" />
+                    android:layout_width="84.5dp"
+                    android:layout_height="31dp"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/ic_wx_title"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/home_tab_todo_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/home_tab_todo"
-                    android:textColor="@color/home_tab_text"
-                    android:textSize="@dimen/home_tab_text" />
-            </LinearLayout>
 
-            <!-- 我的 -->
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <!-- page -->
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/home_vp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
             <LinearLayout
-                android:id="@+id/home_tab_mine"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:id="@+id/home_tab"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:background="@color/white"
+                android:elevation="@dimen/common_elevation"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/home_tab_mine_icon"
-                    android:layout_width="@dimen/home_tab_size"
-                    android:layout_height="@dimen/home_tab_size"
-                    android:src="@mipmap/ic_home_tab_mine" />
+                <!-- 线下 -->
+                <LinearLayout
+                    android:id="@+id/home_tab_offline"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/home_tab_online">
 
-                <TextView
-                    android:id="@+id/home_tab_mine_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/home_tab_mine"
-                    android:textColor="@color/home_tab_text"
-                    android:textSize="@dimen/home_tab_text" />
+                    <ImageView
+                        android:id="@+id/home_tab_offline_icon"
+                        android:layout_width="@dimen/home_tab_size"
+                        android:layout_height="@dimen/home_tab_size"
+                        android:src="@mipmap/ic_home_tab_offline_sel" />
+
+                    <TextView
+                        android:id="@+id/home_tab_offline_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/home_tab_offline"
+                        android:textColor="@color/home_tab_text_sel"
+                        android:textSize="@dimen/home_tab_text" />
+
+                </LinearLayout>
+
+                <!-- 线上 -->
+                <LinearLayout
+                    android:id="@+id/home_tab_online"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintLeft_toRightOf="@id/home_tab_offline"
+                    app:layout_constraintRight_toLeftOf="@id/home_tab_todo">
+
+                    <ImageView
+                        android:id="@+id/home_tab_online_icon"
+                        android:layout_width="@dimen/home_tab_size"
+                        android:layout_height="@dimen/home_tab_size"
+                        android:src="@mipmap/ic_home_tab_online" />
+
+                    <TextView
+                        android:id="@+id/home_tab_online_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/home_tab_online"
+                        android:textColor="@color/home_tab_text"
+                        android:textSize="@dimen/home_tab_text" />
+                </LinearLayout>
+
+                <!-- 待参加 -->
+                <LinearLayout
+                    android:id="@+id/home_tab_todo"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintLeft_toRightOf="@id/home_tab_online"
+                    app:layout_constraintRight_toLeftOf="@id/home_tab_mine">
+
+                    <ImageView
+                        android:id="@+id/home_tab_todo_icon"
+                        android:layout_width="@dimen/home_tab_size"
+                        android:layout_height="@dimen/home_tab_size"
+                        android:src="@mipmap/ic_home_tab_todo" />
+
+                    <TextView
+                        android:id="@+id/home_tab_todo_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/home_tab_todo"
+                        android:textColor="@color/home_tab_text"
+                        android:textSize="@dimen/home_tab_text" />
+                </LinearLayout>
+
+                <!-- 我的 -->
+                <LinearLayout
+                    android:id="@+id/home_tab_mine"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/home_tab_mine_icon"
+                        android:layout_width="@dimen/home_tab_size"
+                        android:layout_height="@dimen/home_tab_size"
+                        android:src="@mipmap/ic_home_tab_mine" />
+
+                    <TextView
+                        android:id="@+id/home_tab_mine_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/home_tab_mine"
+                        android:textColor="@color/home_tab_text"
+                        android:textSize="@dimen/home_tab_text" />
+                </LinearLayout>
+
+
             </LinearLayout>
-
 
         </LinearLayout>
-
-    </LinearLayout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_login"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent" />
 
-</RelativeLayout>
+
+</FrameLayout>
