--- a/app/src/main/res/layout/item_todo_activity.xml
+++ b/app/src/main/res/layout/item_todo_activity.xml
@@ -163,6 +163,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+                            android:visibility="gone"
                             android:text="导航"
                             android:textColor="#FF1365C2"
                             android:textSize="13sp"
@@ -170,6 +171,7 @@
                             android:layout_height="wrap_content"/>
 
                         <ImageView
+                            android:visibility="gone"
                             android:id="@+id/todo_nav"
                             android:src="@mipmap/todo_nav"
                             android:layout_width="wrap_content"
