--- a/app/src/main/res/layout/item_todo_activity.xml
+++ b/app/src/main/res/layout/item_todo_activity.xml
@@ -42,6 +42,7 @@
                 android:layout_marginEnd="@dimen/activity_item_offset"
                 android:layout_weight="1"
                 android:text=""
+                android:fontFamily="sans-serif"
                 android:textColor="#FF292F46"
                 android:textSize="13sp"
                 tools:text="07.10  10:20  周三" />
@@ -143,7 +144,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:maxLines="3"
+                    android:maxLines="2"
+                    android:lines="2"
                     android:text=""
                     android:textColor="#ff707070"
                     android:textSize="13sp"
@@ -218,9 +220,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/activity_action_sign_bg"
-                android:paddingLeft="49dp"
+                android:paddingLeft="24dp"
                 android:paddingTop="7dp"
-                android:paddingRight="49dp"
+                android:paddingRight="24dp"
+                android:minWidth="130dp"
+                android:minHeight="33dp"
+                android:gravity="center"
                 android:paddingBottom="7dp"
                 android:text="签到"
                 android:textColor="@color/white"
